# cpp03-variant

./: CMakeLists.txt  README.md  aligned_storage.hpp  alignment_of.hpp  static_assert.hpp  type_list.hpp  type_traits.hpp  type_with_alignment.hpp  variant.hpp  variant_test.cpp
